# Modellbildung_und_Simulation_in_Python

./: LICENSE  README.md  pyproject.toml  requirements.txt
src/Modellierung dynamischer Systeme/: Einschaltvorgang_am_Kondensator.ipynb  Fallschirmspringer.ipynb  Pendel.ipynb  RLC_Schwingkreis.ipynb  Verlauf_einer_Epidemie.ipynb
src/Symbolische Modellierung/: Fourier_Transformation.ipynb  Kirchhoffschen_Gleichungen.ipynb  Leistungsoptimierung.ipynb  Nachkommastellen_von_pi.ipynb  symbolischer_Objekte.ipynb
src/tf-Objekte/: Bodediagramm.ipynb  Pol_Nullstellen_Darstellung.ipynb  Sprungantwort.ipynb
