[project]
name = "modellbildung-und-simulation-in-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "control>=0.10.1",
    "matplotlib>=3.10.3",
    "notebook>=7.4.2",
    "numpy>=2.2.5",
    "scipy>=1.15.3",
    "sympy>=1.14.0",
]
